--- a/src/main/resources/user/updateUser.fxml
+++ b/src/main/resources/user/updateUser.fxml
@@ -4,7 +4,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.image.Image?>
@@ -13,29 +12,18 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<ScrollPane hmax="600.0" hmin="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.controller.user.UserController">
-    <content>
-        <AnchorPane>
-            <HBox alignment="CENTER" prefHeight="66.0" prefWidth="51.0" AnchorPane.bottomAnchor="1165.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="483.0" AnchorPane.topAnchor="0.0">
+
+  <AnchorPane maxHeight="791.0" minHeight="767.0" prefHeight="791.0" prefWidth="748.0" style="-fx-background-color: #2160E;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.controller.user.UserController">
+      <HBox alignment="CENTER" prefHeight="66.0" prefWidth="149.0" AnchorPane.bottomAnchor="1165.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="669.0" AnchorPane.topAnchor="0.0" />
+   <HBox alignment="CENTER" layoutX="-2.0" layoutY="69.0" prefHeight="708.0" prefWidth="765.0">
+      <children>
+         <VBox fillWidth="false" maxWidth="1.7976931348623157E308" prefHeight="990.0" prefWidth="732.0" spacing="10.0">
             <children>
-               <Button fx:id="backButton" onAction="#returnToPostsPage" styleClass="back-button">
-                  <graphic>
-                     <ImageView fitHeight="16" fitWidth="16" pickOnBounds="true" preserveRatio="true">
-                        <image>
-                           <Image url="@../icons/back-icon.png" />
-                        </image>
-                     </ImageView>
-                  </graphic>
-               </Button>
-            </children>
-            </HBox>
-         <HBox alignment="CENTER" layoutX="10.0" layoutY="68.0" prefHeight="1104.0" prefWidth="522.0">
-            <children>
-               <VBox fillWidth="false" maxWidth="1.7976931348623157E308">
+               <HBox prefHeight="238.0" prefWidth="810.0" spacing="10.0">
                   <children>
-                     <TitledPane layoutX="10.0" layoutY="10.0" prefHeight="159.0" prefWidth="522.0" text="Picture">
+                     <TitledPane prefHeight="238.0" prefWidth="375.0" text="Picture">
                         <content>
-                           <VBox alignment="CENTER" spacing="5.0">
+                           <VBox alignment="CENTER" prefHeight="212.0" prefWidth="470.0" spacing="5.0">
                               <children>
                                  <HBox alignment="CENTER" spacing="15.0">
                                     <children>
@@ -60,14 +48,14 @@
                                     </VBox.margin>
                                  </HBox>
                                  <Label fx:id="profilePictureUpdateMessageLabel" />
-                                 <Button maxHeight="35.0" minHeight="35.0" onAction="#performUpdatePicture" prefHeight="35.0" prefWidth="500.0" text="Submit" />
+                                 <Button maxHeight="56.0" minHeight="35.0" onAction="#performUpdatePicture" prefHeight="56.0" prefWidth="241.0" text="Submit" />
                               </children>
                            </VBox>
                         </content>
                      </TitledPane>
-                     <TitledPane text="Information">
+                     <TitledPane prefHeight="238.0" prefWidth="591.0" text="Information">
                         <content>
-                           <VBox spacing="5.0">
+                           <VBox prefHeight="212.0" prefWidth="279.0" spacing="5.0">
                               <children>
                                  <Label text="Phone:" />
                                  <TextField fx:id="phoneField" maxHeight="35.0" minHeight="35.0" prefHeight="35.0" />
@@ -81,60 +69,72 @@
                            </VBox>
                         </content>
                      </TitledPane>
-                     <TitledPane text="Change Email">
+                  </children>
+               </HBox>
+               <HBox prefHeight="176.0" prefWidth="732.0" spacing="10.0">
+                  <children>
+                     <TitledPane prefHeight="278.0" prefWidth="373.0" text="Change Email">
                         <content>
-                           <VBox spacing="5.0">
+                           <VBox prefHeight="277.0" prefWidth="370.0" spacing="5.0">
                               <children>
                                  <Label text="Current Email:" />
-                                 <TextField fx:id="currentEmailField" editable="false" maxHeight="35.0" minHeight="35.0" prefHeight="35.0" />
+                                 <TextField fx:id="currentEmailField" editable="false" maxHeight="35.0" minHeight="28.0" prefHeight="28.0" prefWidth="711.0" />
                                  <Label text="New Email:" />
-                                 <TextField fx:id="newEmailField" maxHeight="35.0" minHeight="35.0" prefHeight="35.0" />
+                                 <TextField fx:id="newEmailField" maxHeight="35.0" minHeight="26.0" prefHeight="26.0" prefWidth="711.0" />
                                  <VBox fx:id="newEmailErrorsContainer" />
                                  <Label text="Password:" />
-                                 <PasswordField fx:id="passwordForEmailField" maxHeight="35.0" minHeight="35.0" prefHeight="35.0" />
+                                 <PasswordField fx:id="passwordForEmailField" maxHeight="35.0" minHeight="29.0" prefHeight="29.0" prefWidth="711.0" />
                                  <VBox fx:id="passwordForEmailErrorsContainer" />
                                  <Label fx:id="emailUpdateMessageLabel" />
-                                 <Button maxHeight="35.0" minHeight="35.0" onAction="#changeEmail" prefHeight="35.0" prefWidth="500.0" text="Change Email" />
+                                 <Button maxHeight="46.0" minHeight="30.0" onAction="#changeEmail" prefHeight="46.0" prefWidth="351.0" text="Change Email" />
                               </children>
                            </VBox>
                         </content>
                      </TitledPane>
-                     <TitledPane text="Change Password">
+                     <TitledPane prefHeight="275.0" prefWidth="361.0" text="Change Password">
                         <content>
-                           <VBox spacing="5.0">
+                           <VBox prefHeight="228.0" prefWidth="358.0" spacing="5.0">
                               <children>
                                  <Label text="Old Password:" />
                                  <PasswordField fx:id="oldPasswordField" maxHeight="35.0" minHeight="35.0" prefHeight="35.0" />
                                  <VBox fx:id="oldPasswordErrorsContainer" />
+                                 <Label />
                                  <Label text="New Password:" />
                                  <PasswordField fx:id="newPasswordField" maxHeight="35.0" minHeight="35.0" prefHeight="35.0" />
                                  <VBox fx:id="newPasswordErrorsContainer" />
                                  <Label fx:id="passwordUpdateMessageLabel" />
-                                 <Button maxHeight="35.0" minHeight="35.0" onAction="#changePassword" prefHeight="35.0" prefWidth="500.0" text="Change Password" />
-                              </children>
-                           </VBox>
-                        </content>
-                     </TitledPane>
-                     <TitledPane layoutX="10.0" layoutY="763.0" text="Delete Account">
-                        <content>
-                           <VBox spacing="5.0">
-                              <children>
-                                 <Label text="Password:" />
-                                 <PasswordField fx:id="deletePasswordField" maxHeight="35.0" minHeight="35.0" prefHeight="35.0" />
-                                 <VBox fx:id="deletePasswordErrorsContainer" />
-                                 <Label fx:id="deleteMessageLabel" />
-                                 <Button maxHeight="35.0" minHeight="35.0" onAction="#deleteAccount" prefHeight="35.0" prefWidth="500.0" style="-fx-background-color: #ed372d;" text="Delete Account" textFill="WHITE" />
+                                 <Label />
+                                 <Button maxHeight="117.0" minHeight="30.0" onAction="#changePassword" prefHeight="77.0" prefWidth="334.0" text="Change Password" />
                               </children>
                            </VBox>
                         </content>
                      </TitledPane>
                   </children>
-               </VBox>
+               </HBox>
+               <TitledPane layoutX="10.0" layoutY="763.0" prefHeight="171.0" prefWidth="737.0" text="Delete Account">
+                  <content>
+                     <VBox spacing="2.0">
+                        <children>
+                           <Label text="Password:" />
+                           <PasswordField fx:id="deletePasswordField" maxHeight="35.0" minHeight="35.0" prefHeight="35.0" />
+                           <VBox fx:id="deletePasswordErrorsContainer" />
+                           <Label fx:id="deleteMessageLabel" />
+                           <Button maxHeight="35.0" minHeight="35.0" onAction="#deleteAccount" prefHeight="35.0" prefWidth="734.0" style="-fx-background-color: #ed372d;" text="Delete Account" textFill="WHITE" />
+                        </children>
+                     </VBox>
+                  </content>
+               </TitledPane>
             </children>
-         </HBox>
-        </AnchorPane>
-    </content>
-   <padding>
-      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-   </padding>
-</ScrollPane>
+         </VBox>
+      </children>
+   </HBox>
+   <Button fx:id="backButton" layoutX="16.0" layoutY="14.0" onAction="#returnToPostsPage" prefHeight="34.0" prefWidth="61.0" styleClass="back-button">
+      <graphic>
+         <ImageView fitHeight="16" fitWidth="16" pickOnBounds="true" preserveRatio="true">
+            <image>
+               <Image url="@../icons/back-icon.png" />
+            </image>
+         </ImageView>
+      </graphic>
+   </Button>
+  </AnchorPane>
